fix unsupported leftMax for products slider on mobile

--- a/frontend/styles/Nprogress.css
+++ b/frontend/styles/Nprogress.css
@@ -7,7 +7,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 2px;
+  height: 3px;
   background-color: rgba(145, 145, 145, .35);
 }
 
